--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+= 0.0.3 (2014-04-22)
+
+* Added vertical scroll effect.
+* Added new properties.
+	* dismissOnBackgroundTouch
+	* horizontalTransitionEffect
+	* buttonInsertDelay
+
 = 0.0.2 (2014-02-04)
 
 * Add behavior that when the button tapped, the menu automatically close. (You don't need to do any modification from 0.0.1).
